--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ p {
   padding-bottom: 10px;
   padding-right: 32px;
   padding-left: 32px;
+  cursor: pointer;
 }
 
 .contacts {
@@ -279,8 +280,8 @@ p {
 .auth-nav .link {
   color: var(--primary-text-color);
   display: inline-block;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   display: inline-block;
   position: relative;
@@ -456,6 +457,7 @@ p {
 
 .images-list .item:not(:first-child) {
   margin-left: 30px;
+  z-index: 0;
 }
 
 .images-list {
@@ -674,7 +676,10 @@ address {
   display: block;
 }
 
-.mail-form .footer-label {
+.mail-form {
+  display: inline-flex;
+}
+.footer-information {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -720,13 +725,14 @@ input[placeholder="E-mail"] {
   display: flex;
   align-items: center;
   text-align: center;
-  align-self: center;
+  align-self: flex-end;
   letter-spacing: 0.06em;
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   border-radius: 4px;
   color: var(--title-accent);
+  cursor: pointer;
 }
 
 .button-icon {
@@ -993,8 +999,8 @@ input[placeholder="E-mail"] {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.backdrop.is-hidden
-/* .modal.is-hidden*/ {
+.backdrop.is-hidden,
+.modal.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
@@ -1004,6 +1010,7 @@ input[placeholder="E-mail"] {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: inline-block;
   width: 528px;
   height: 581px;
   background-color: var(--background);
@@ -1039,7 +1046,7 @@ input[placeholder="E-mail"] {
   fill: var(--accent-color);
 }
 
-.modal-title {
+.modal-information {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -1053,15 +1060,15 @@ input[placeholder="E-mail"] {
 .modal-form {
   width: 100%;
   height: 100%;
-  display: flex;
+  display: block;
   flex-direction: column;
   padding-top: 40px;
-  padding-bottom: 50px;
+  padding-bottom: 40px;
   padding-right: 40px;
   padding-left: 40px;
 }
 
-.modal-form label {
+.formLabel {
   display: block;
   font-weight: 400;
   font-size: 12px;
@@ -1073,6 +1080,7 @@ input[placeholder="E-mail"] {
 }
 
 .modalInput {
+  outline: none;
   width: 448px;
   height: 40px;
   display: block;
@@ -1096,6 +1104,7 @@ input[placeholder="E-mail"] {
 }
 
 .modalTextarea {
+  outline: none;
   width: 448px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1187,7 +1196,6 @@ textarea[placeholder="Введите текст"] {
 .checkLabel {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
 }
 
 .checkLabel::before {
@@ -1241,4 +1249,8 @@ textarea[placeholder="Введите текст"] {
   display: inline-block;
   border: 1px solid transparent;
   border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
